tests/rosetta/out/C/cholesky-decomposition.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:25Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_float concat_list_float(list_float a, list_float b) {
  list_float r = list_float_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
double sqrtApprox(double x) {
  double guess = x;
  int i = 0;
  while (i < 20) {
    guess = (guess + x / guess) / 2.0;
    i = i + 1;
  }
  return guess;
}

int cholesky(int a) {
  int n = a.len;
  list_int tmp1 = list_int_create(0);
  int l = tmp1;
  int i = 0;
  while (i < n) {
    list_float tmp2 = {0, NULL};
    list_float row = tmp2;
    int j = 0;
    while (j < n) {
      list_float tmp3 = list_float_create(1);
      tmp3.data[0] = 0.0;
      list_float tmp4 = concat_list_float(row, tmp3);
      row = tmp4;
      j = j + 1;
    }
    l = 0;
    i = i + 1;
  }
  i = 0;
  while (i < n) {
    int j = 0;
    while (j <= i) {
      double sum = a.data[i].data[j];
      int k = 0;
      while (k < j) {
        sum = sum - l.data[i].data[k] * l.data[j].data[k];
        k = k + 1;
      }
      if (i == j) {
        l.data[i].data[j] = sqrtApprox(sum);
      } else {
        l.data[i].data[j] = sum / l.data[j].data[j];
      }
      j = j + 1;
    }
    i = i + 1;
  }
  return l;
}

int printMat(int m) {
  int i = 0;
  while (i < m.len) {
    const char *line = "";
    int j = 0;
    while (j < m.data[i].len) {
      char *tmp5 = _str(m.data[i].data[j]);
      char *tmp6 = concat_string(line, tmp5);
      line = tmp6;
      if (j < m.data[i].len - 1) {
        char *tmp7 = concat_string(line, " ");
        line = tmp7;
      }
      j = j + 1;
    }
    printf("%s\n", line);
    i = i + 1;
  }
}

int demo(int a) {
  printf("A:\n");
  printMat(a);
  int l = cholesky(a);
  printf("L:\n");
  printMat(l);
}

int main() {
  list_float tmp9 = list_float_create(3);
  tmp9.data[0] = 25.0;
  tmp9.data[1] = 15.0;
  tmp9.data[2] = (-5.0);
  list_float tmp10 = list_float_create(3);
  tmp10.data[0] = 15.0;
  tmp10.data[1] = 18.0;
  tmp10.data[2] = 0.0;
  list_float tmp11 = list_float_create(3);
  tmp11.data[0] = (-5.0);
  tmp11.data[1] = 0.0;
  tmp11.data[2] = 11.0;
  list_int tmp8_data[] = {tmp9, tmp10, tmp11};
  list_list_int tmp8 = {3, tmp8_data};
  demo(tmp8);
  list_float tmp13 = list_float_create(4);
  tmp13.data[0] = 18.0;
  tmp13.data[1] = 22.0;
  tmp13.data[2] = 54.0;
  tmp13.data[3] = 42.0;
  list_float tmp14 = list_float_create(4);
  tmp14.data[0] = 22.0;
  tmp14.data[1] = 70.0;
  tmp14.data[2] = 86.0;
  tmp14.data[3] = 62.0;
  list_float tmp15 = list_float_create(4);
  tmp15.data[0] = 54.0;
  tmp15.data[1] = 86.0;
  tmp15.data[2] = 174.0;
  tmp15.data[3] = 134.0;
  list_float tmp16 = list_float_create(4);
  tmp16.data[0] = 42.0;
  tmp16.data[1] = 62.0;
  tmp16.data[2] = 134.0;
  tmp16.data[3] = 106.0;
  list_int tmp12_data[] = {tmp13, tmp14, tmp15, tmp16};
  list_list_int tmp12 = {4, tmp12_data};
  demo(tmp12);
  return 0;
}
